[metadata]
name = json_viewer
description = module that allow to navigate through a json object
author = Pavlo Kryven
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    json_viewer
install_requires = 
    requests>=2
python_requires = >=3.6
zip_safe = no